[package]
name = "populate-secrets"
version = "0.1.0"
authors = ["RollenRegistratorBot <rollenseb@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "~1.0.31"
clap = "~2.27.0"
log = "~0.4.8"
regex = "~1.3.0"
rusoto_core = "~0.43.0"
rusoto_secretsmanager = "~0.43.0"
serde_json = "~1.0.0"
tokio = "~1.8.4"
